--- a/MyEvernoteSolution/MyEvernote.Entities/MyEvernote.Entities.csproj
+++ b/MyEvernoteSolution/MyEvernote.Entities/MyEvernote.Entities.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValueObjects\LoginViewModel.cs" />
     <Compile Include="ValueObjects\RegisterViewModel.cs" />
+    <Compile Include="ValueObjects\UpdateViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
