--- a/MyEvernoteSolution/MyEvernoteBusinessLayer/MyEvernote.BusinessLayer.csproj
+++ b/MyEvernoteSolution/MyEvernoteBusinessLayer/MyEvernote.BusinessLayer.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LikedManager.cs" />
     <Compile Include="Result\BusinessLayerResult.cs" />
     <Compile Include="CategoryManager.cs" />
     <Compile Include="Abstract\ManagerBase.cs" />
