admin panel=>ekle,sil,güncelle hepsi tamam/Yorum beğeni ajax işleri yapılıcak

--- a/MyEvernoteSolution/MyEvernote.WebApp/MyEvernote.WebApp.csproj
+++ b/MyEvernoteSolution/MyEvernote.WebApp/MyEvernote.WebApp.csproj
@@ -194,7 +194,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Start\App_Data\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
