beğeni butonları aktif hale getirildi-giriş yapmadan beğeni yapılırsa patlıyo- index dışındaki sayfalar için js eklenmeli - yorum eklemeleri yapılıcak

--- a/MyEvernoteSolution/MyEvernote.WebApp/MyEvernote.WebApp.csproj
+++ b/MyEvernoteSolution/MyEvernote.WebApp/MyEvernote.WebApp.csproj
@@ -186,6 +186,7 @@
     <Content Include="Views\User\Edit.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Note\LikeIndex.cshtml" />
+    <Content Include="Views\Home\indexdeneme.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
