--- a/MyEvernoteSolution/MyEvernote.WebApp/MyEvernote.WebApp.csproj
+++ b/MyEvernoteSolution/MyEvernote.WebApp/MyEvernote.WebApp.csproj
@@ -53,6 +53,9 @@
     <Reference Include="FakeData, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\FakeData.1.0.0\lib\FakeData.dll</HintPath>
     </Reference>
+    <Reference Include="GemBox.Spreadsheet, Version=41.3.30.1101, Culture=neutral, PublicKeyToken=b1b72c69714d4847, processorArchitecture=MSIL">
+      <HintPath>..\packages\GemBox.Spreadsheet.41.3.30.1101\lib\net30\GemBox.Spreadsheet.dll</HintPath>
+    </Reference>
     <Reference Include="JQueryUIHelpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=1440f6df3b58b47e, processorArchitecture=MSIL">
       <HintPath>..\packages\jQueryUIHelpers.Mvc5.3.0.0\lib\net45\JQueryUIHelpers.dll</HintPath>
     </Reference>
@@ -242,6 +245,7 @@
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\Note\LikeIndex.cshtml" />
     <Content Include="Views\Home\indexdeneme.cshtml" />
+    <Content Include="Views\Home\ActivateOk.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -251,6 +255,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Start\App_Data\" />
+    <Folder Include="SpreadSheets\" />
     <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
