--- a/MyEvernoteSolution/MyEvernote.WebApp/packages.config
+++ b/MyEvernoteSolution/MyEvernote.WebApp/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
   <package id="FakeData" version="1.0.0" targetFramework="net46" />
+  <package id="GemBox.Spreadsheet" version="41.3.30.1101" targetFramework="net46" />
   <package id="jQuery" version="3.1.1" targetFramework="net46" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net46" />
